SigmaCodebackup3rdSep/objects/Currency_Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Currency Exchange Rates</relationshipLabel>
        <relationshipName>Currency_Exchange_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_From__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>&quot;1 &quot; +  To_Currency__r.Currency_Code__c  + &quot; = &quot; + TEXT( Rate__c ) + &quot; &quot; +  Currency__r.Currency_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Currency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Currency__c.Is_Default_Currency__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Currency Exchange Rates (To Currency)</relationshipLabel>
        <relationshipName>Currency_Exchange_Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Currency Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>Currency__c</columns>
        <columns>To_Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>XR-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchange Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>